--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "gulp-include": "^1.1.0",
     "gulp-minify-css": "^0.3.11",
     "gulp-rename": "^1.2.0",
-    "gulp-replace-task": "^0.1.0",
     "gulp-sass": "^1.1.0",
-    "gulp-uglify": "^1.0.1"
+    "gulp-uglify": "^1.0.1",
+    "gulp-replace": "^0.5.0"
   }
 }
