--- a/.htaccess
+++ b/.htaccess
@@ -283,7 +283,7 @@ FileETag None
 
 <IfModule mod_rewrite.c>
     RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteRule ^(.+)\.(@@timestamp|\d+)\.(min\.css|css|cur|gif|ico|jpe?g|min\.js|js|png|svgz?|webp)$ $1.$3 [L]
+    RewriteRule ^(.+)\.(@@(?:timestamp|\d+))\.(min\.css|css|cur|gif|ico|jpe?g|min\.js|js|png|svgz?|webp)$ $1.$3 [L]
 </IfModule>
 
 # ##############################################################################
