Change HTML Purifier cache directory

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,10 @@ site/cache/fetcher/*
 site/cache/github-client/*
 !site/cache/github-client/.gitkeep
 
+!site/cache/html-purifier
+site/cache/html-purifier/*
+!site/cache/html-purifier/.gitkeep
+
 # Exclude logs
 site/logs/*
 !site/logs/.gitkeep
